# STAG_vykazy_2.0

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  vercel.json
app/: main.py  models.py  settings.py  utils.py
app/css/: app.css
app/templates/: home.html  index.html
app/templates/components/: plot.html  table.html
static/css/: app.css
tailwindcss/: package-lock.json  package.json  tailwind.config.js
templates/: index.html
templates/components/: table.html
